syntax = "proto3";
option go_package="github.com/chronojam/solarium/pkg/gamemodes/thewolfgame/proto";


/*
 * Wraps all the-wolf-game actions
*/
message TheWolfGameAction {
    message VoteMurder {
        // The player to lynch/murder
        string PlayerId = 1;
    };
    message VoteStart {};
    // What they have voted to do
    VoteMurder Vote = 1;
    // Special vote in order to start the game
    VoteStart  StartVote = 2;
}

message TheWolfGameEvent {
    message VillagerVictory {};
    message WerewolfVictory {};
    message PlayerJoined {
        string PlayerName = 1;
    };
    message PlayerDeath {
        string PlayerID = 1;
        string PlayerName = 2;
    };
    message GameStarted {};
    message TimeTransistion {
        bool IsNight = 1;
    };

    // Populated in the event of the village victory
    VillagerVictory VillageVictory = 1;
    // Populated in the event of a wolf victory
    WerewolfVictory WolfVictory = 2;
    // Populated in the event someone has been killed/lynched
    PlayerDeath PlayerDied = 3;
    // Populated in the event of a gamestarted
    GameStarted GameStart = 4;
    // Populated in the event of day/night transisition
    TimeTransistion Transisition = 5;
    // Populated when a player joins
    PlayerJoined NewPlayer = 6;
}

message TheWolfGamePlayer {
    enum PlayerRole {
        VILLAGER = 0;
        WEREWOLF = 1;
    }
    // Public fields, anyone can query these.
    string ID = 1;
    string Name = 2;
    bool IsAlive = 3;

    // Private fields, only get these if you also pass the playerSecret.
    PlayerRole Role = 4;
}
message TheWolfGameStatus {
    repeated TheWolfGamePlayer Players = 1;
    bool IsNight = 3;
    bool IsStarted = 4;
}